--- a/devcontainer-example/docker-compose.yml
+++ b/devcontainer-example/docker-compose.yml
@@ -37,6 +37,16 @@ services:
       - "8000-8005:8000-8005"
       - "9000-9005:9000-9005"
 
+  nginx:
+    build:
+      context: ./nginx/
+      dockerfile: Dockerfile.nginx
+    container_name: nginx
+    depends_on:
+      - frappe
+    ports:
+      - 80:80
+
 volumes:
   mariadb-vol:
   postgresql-vol:
