Modified NGINX config to fix redirection error

--- a/devcontainer-example/nginx/nginx.conf
+++ b/devcontainer-example/nginx/nginx.conf
@@ -1,12 +1,43 @@
 server {
     listen 80;
-    server_name localhost 127.0.0.1;
+    server_name localhost;
 
-    proxy_set_header Host $Host;
-    proxy_set_header X-Real_IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    root /workspace/development/frappe-bench/sites;
 
-    location / {
+    location /api {
+
+        if ($request_method = OPTIONS ) {
+            add_header "Access-Control-Allow-Origin"  *;
+            add_header "Access-Control-Allow-Methods" "GET, POST, PUT, DELETE, OPTIONS, HEAD";
+            add_header "Access-Control-Allow-Headers" "Authorization, Origin, X-Requested-With, Content-Type, Accept";
+            return 200;
+        }
+        if ($request_method ~* "(GET|POST|PUT|DELETE)") {
+            add_header "Access-Control-Allow-Origin"  *;
+        }
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Real_IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Frappe-Site-Name site1.local;
+        proxy_set_header Host $host;
+        proxy_set_header X-Frappe-Site-PATH $request_uri;
+        proxy_set_header X-Use-X-Accel-Redirect True;
+        proxy_read_timeout 120;
+        proxy_redirect off;
+
         proxy_pass http://frappe:8000;
     }
+
+    location /socket.io {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header X-Frappe-Site-Name site1.local;
+        proxy_set_header Origin $scheme://$http_host;
+        proxy_set_header Host $host;
+
+        proxy_pass http://frappe:9000;
+    }
+
 }
+
