--- a/devcontainer-example/nginx/nginx.conf
+++ b/devcontainer-example/nginx/nginx.conf
@@ -1,43 +1,134 @@
-server {
-    listen 80;
-    server_name localhost;
-
-    root /workspace/development/frappe-bench/sites;
-
-    location /api {
-
-        if ($request_method = OPTIONS ) {
-            add_header "Access-Control-Allow-Origin"  *;
-            add_header "Access-Control-Allow-Methods" "GET, POST, PUT, DELETE, OPTIONS, HEAD";
-            add_header "Access-Control-Allow-Headers" "Authorization, Origin, X-Requested-With, Content-Type, Accept";
-            return 200;
-        }
-        if ($request_method ~* "(GET|POST|PUT|DELETE)") {
-            add_header "Access-Control-Allow-Origin"  *;
-        }
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Real_IP $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header X-Frappe-Site-Name site1.local;
-        proxy_set_header Host $host;
-        proxy_set_header X-Frappe-Site-PATH $request_uri;
-        proxy_set_header X-Use-X-Accel-Redirect True;
-        proxy_read_timeout 120;
-        proxy_redirect off;
-
-        proxy_pass http://frappe:8000;
-    }
-
-    location /socket.io {
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header X-Frappe-Site-Name site1.local;
-        proxy_set_header Origin $scheme://$http_host;
-        proxy_set_header Host $host;
-
-        proxy_pass http://frappe:9000;
-    }
-
+upstream frappe-bench-frappe {
+	server frappe:8000 fail_timeout=0;
+}
+upstream webapp {
+	server 192.168.0.185:3000 fail_timeout=0;
 }
 
+upstream frappe-bench-socketio-server {
+	server frappe:9000 fail_timeout=0;
+}
+server {
+
+	listen 80;
+
+	server_name	dev-app.local;
+
+	proxy_buffer_size 128k;
+	proxy_buffers 4 256k;
+	proxy_busy_buffers_size 256k;
+	add_header X-Frame-Options "SAMEORIGIN";
+	add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
+	add_header X-Content-Type-Options nosniff;
+	add_header X-XSS-Protection "1; mode=block";
+
+	location /assets {
+		try_files $uri = 404;
+	}
+
+	location ~ ^/protected/(.*) {
+		internal;
+		try_files /site1.local/$1 = 404;
+	}
+
+	location /api {
+		proxy_set_header X-Forwarded-For $remote_addr;
+		proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_set_header X-Frappe-Site-Name site1.local;
+		proxy_set_header Host $host;
+		proxy_set_header X-Frappe-Site-PATH $request_uri;
+		proxy_set_header X-Use-X-Accel-Redirect True;
+		proxy_read_timeout 120;
+		proxy_redirect off;
+
+		proxy_pass http://frappe-bench-frappe;
+	}
+
+	location /socket.io {
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "upgrade";
+		proxy_set_header X-Frappe-Site-Name site1.local;
+		proxy_set_header Origin $scheme://$http_host;
+		proxy_set_header Host $host;
+
+		proxy_pass http://frappe-bench-socketio-server;
+	}
+
+	location /ws {
+		proxy_http_version 1.1;
+		proxy_set_header Upgrade $http_upgrade;
+		proxy_set_header Connection "upgrade";
+		proxy_set_header X-Frappe-Site-Name site1.local;
+		proxy_set_header Origin $scheme://$http_host;
+		proxy_set_header Host $host;
+		proxy_pass http://webapp$request_uri;
+	}
+
+	location / {
+		proxy_set_header Host $host;
+		proxy_set_header X-Real-IP $remote_addr;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_pass http://webapp$request_uri;
+
+		location ~ ^/files/.*.(htm|html|svg|xml) {
+			add_header Content-disposition "attachment";
+			try_files /site1.local/public/$uri @webserver;
+		}
+	}
+
+	location @webserver {
+		proxy_set_header X-Forwarded-For $remote_addr;
+		proxy_set_header X-Forwarded-Proto $scheme;
+		proxy_set_header X-Frappe-Site-Name site1.local;
+		proxy_set_header Host $host;
+		proxy_set_header X-Use-X-Accel-Redirect True;
+		proxy_read_timeout 120;
+		proxy_redirect off;
+
+		proxy_pass http://frappe-bench-frappe;
+	}
+
+	# error pages
+	error_page 502 /502.html;
+	location /502.html {
+		root /home/frappe/.bench/bench/config/templates;
+		internal;
+	}
+
+	# optimizations
+	sendfile on;
+	keepalive_timeout 15;
+	client_max_body_size 50m;
+	client_body_buffer_size 16K;
+	client_header_buffer_size 1k;
+
+	# enable gzip compresion
+	# based on https://mattstauffer.co/blog/enabling-gzip-on-nginx-servers-including-laravel-forge
+	gzip on;
+	gzip_http_version 1.1;
+	gzip_comp_level 5;
+	gzip_min_length 256;
+	gzip_proxied any;
+	gzip_vary on;
+	gzip_types
+	application/atom+xml
+	application/javascript
+	application/json
+	application/rss+xml
+	application/vnd.ms-fontobject
+	application/x-font-ttf
+	application/font-woff
+	application/x-web-app-manifest+json
+	application/xhtml+xml
+	application/xml
+	font/opentype
+	image/svg+xml
+	image/x-icon
+	text/css
+	text/plain
+	text/x-component
+	;
+	# text/html is always compressed by HttpGzipModule
+}
