--- a/overrides/compose.new-proxy.yaml
+++ b/overrides/compose.new-proxy.yaml
@@ -19,6 +19,9 @@ services:
       # Use the "le" (Let's Encrypt) resolver created below
       - traefik.http.routers.frontend-https.tls.certresolver=le
 
+    volumes:
+      - ../images/nginx/nginx-template-cors-fix.conf:/etc/nginx/templates/default.conf.template
+
         #networks:
         #traefik-public:
         # external: true
