--- a/images/nginx/nginx-template-cors-fix.conf
+++ b/images/nginx/nginx-template-cors-fix.conf
@@ -1,15 +1,9 @@
 upstream backend-server {
-	server $ {
-		BACKEN
-	}
-	fail_timeout=0;
+	server ${BACKEND} fail_timeout=0;
 }
 
 upstream socketio-server {
-	server $ {
-		SOCKETI
-	}
-	fail_timeout=0;
+	server ${SOCKETIO} fail_timeout=0;
 }
 
 # Parse the X-Forwarded-Proto header - if set - defaulting to $scheme.
@@ -33,18 +27,9 @@ server {
 	add_header X-XSS-Protection "1; mode=block";
 	add_header Referrer-Policy "same-origin, strict-origin-when-cross-origin";
 
-	set_real_ip_from $ {
-		UPSTREAM_REAL_IP_ADDRES
-	}
-	;
-	real_ip_header $ {
-		UPSTREAM_REAL_IP_HEADE
-	}
-	;
-	real_ip_recursive $ {
-		UPSTREAM_REAL_IP_RECURSIV
-	}
-	;
+	set_real_ip_from ${UPSTREAM_REAL_IP_ADDRESS};
+	real_ip_header ${UPSTREAM_REAL_IP_HEADER};
+	real_ip_recursive ${UPSTREAM_REAL_IP_RECURSIVE};
 
 	location /assets {
 		try_files $uri =404;
@@ -61,10 +46,7 @@ server {
 		proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
 		proxy_set_header Upgrade $http_upgrade;
 		proxy_set_header Connection "upgrade";
-		proxy_set_header X-Frappe-Site-Name $ {
-			FRAPPE_SITE_NAME_HEADE
-		}
-		;
+		proxy_set_header X-Frappe-Site-Name ${FRAPPE_SITE_NAME_HEADER};
 		proxy_set_header Origin $scheme://$http_host;
 		proxy_set_header Host $host;
 
@@ -87,7 +69,6 @@ server {
 	location @webserver {
 
 		if ($request_method = 'OPTIONS') {
-
 			add_header 'Access-Control-Allow-Origin' '*';
 			add_header 'Access-Control-Allow-Credentials' 'true';
 			add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
@@ -125,19 +106,16 @@ server {
 			add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,mode,DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
 		}
 
-
+		
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
-		proxy_set_header X-Frappe-Site-Name $ {
-			FRAPPE_SITE_NAME_HEADE
-		}
-		;
+		proxy_set_header X-Frappe-Site-Name ${FRAPPE_SITE_NAME_HEADER};
 		proxy_set_header Host $host;
 		proxy_set_header X-Use-X-Accel-Redirect True;
 		proxy_read_timeout 120;
 		proxy_redirect off;
 
-		proxy_pass http://backend-server;
+		proxy_pass  http://backend-server;
 	}
 
 	# error pages
@@ -162,21 +140,21 @@ server {
 	gzip_proxied any;
 	gzip_vary on;
 	gzip_types
-	application/atom+xml
-	application/javascript
-	application/json
-	application/rss+xml
-	application/vnd.ms-fontobject
-	application/x-font-ttf
-	application/font-woff
-	application/x-web-app-manifest+json
-	application/xhtml+xml
-	application/xml
-	font/opentype
-	image/svg+xml
-	image/x-icon
-	text/css
-	text/plain
-	text/x-component;
-	# text/html is always compressed by HttpGzipModule
+		application/atom+xml
+		application/javascript
+		application/json
+		application/rss+xml
+		application/vnd.ms-fontobject
+		application/x-font-ttf
+		application/font-woff
+		application/x-web-app-manifest+json
+		application/xhtml+xml
+		application/xml
+		font/opentype
+		image/svg+xml
+		image/x-icon
+		text/css
+		text/plain
+		text/x-component;
+		# text/html is always compressed by HttpGzipModule
 }
