--- a/images/nginx/nginx-template-cors-fix.conf
+++ b/images/nginx/nginx-template-cors-fix.conf
@@ -68,9 +68,13 @@ server {
 
 	location @webserver {
 
+
 		add_header 'Access-Control-Allow-Origin' '*';
 		add_header 'Access-Control-Allow-Credentials' 'true';
 		add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+		add_header 'Access-Control-Allow-Headers' 'Authorization,Accept,mode,DNT,X-Mx-ReqToken,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type';
+	
+
 		
 		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 		proxy_set_header X-Forwarded-Proto $proxy_x_forwarded_proto;
